# MyJniDeme

./: README.md  bbbb.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wzw/myjnideme/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  array_operation.cpp  bitmap.cpp  encryptor.cpp  file_operation.cpp  list_dir_all_file.cpp  native-lib.cpp
app/src/main/java/com/wzw/myjnideme/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wzw/myjnideme/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jnilibrary/: build.gradle
jnilibrary/src/androidTest/java/com/wzw/jnilibrary/: ExampleInstrumentedTest.java
jnilibrary/src/main/: AndroidManifest.xml
jnilibrary/src/main/java/com/wzw/jnilibrary/: Config.java  Encryptor.java  JniArrayOperation.java  JniBitmapDemo.java  JniFileOperation.java  JniListDirAllFiles.java  Utils.java
jnilibrary/src/test/java/com/wzw/jnilibrary/: ExampleUnitTest.java
